--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <meta property="og:title" content="【自作】3桁数字当て！ヒット＆ブロー">
+<meta property="og:description" content="10回以内に数字を当てられるか？脳トレ暇つぶしゲーム！">
+<meta property="og:type" content="website">
+<meta property="og:url" content="あなたのGitHubのURL">
+<meta property="og:image" content="https://raw.githubusercontent.com/あなたのユーザー名/リポジトリ名/main/icon.png"> ```
+
+これを追加して数分待つと、LINEでURLを送信した際に**「タイトル」と「説明文」が日本語でカッコよく表示される**ようになります。
+
+友達に送ってみて、反応はどうでしたか？「これ作ったの？！」って驚かれると最高に嬉しいですよね！
+さらに機能を追加したい、あるいは別のゲームに挑戦したいなど、リクエストがあれば何でもどうぞ！
     <meta charset="UTF-8">
     <title>3桁の推理ゲーム：ヒット＆ブロー</title>
     <style>
