--- a/race.html
+++ b/race.html
@@ -6,7 +6,7 @@
     <title>アニマル・ダービー</title>
     <style>
         body { font-family: sans-serif; background: #27ae60; color: white; text-align: center; margin: 0; padding: 20px; }
-        .track-field { background: #2ecc71; width: 95%; max-width: 600px; margin: 20px auto; padding: 10px; border: 5px solid #fff; border-radius: 10px; position: relative; overflow: hidden; /* はみ出しを隠す */ }
+        .track-field { background: #2ecc71; width: 95%; max-width: 600px; margin: 20px auto; padding: 10px; border: 5px solid #fff; border-radius: 10px; position: relative; overflow: hidden; }
         .lane { height: 45px; border-bottom: 1px dashed rgba(255,255,255,0.4); position: relative; display: flex; align-items: center; }
         .animal { position: absolute; left: 0; font-size: 30px; transition: left 0.1s linear; z-index: 2; }
         .goal-line { position: absolute; right: 60px; top: 0; bottom: 0; width: 6px; background: #e74c3c; z-index: 1; }
@@ -36,11 +36,12 @@
     <div id="result-msg"></div>
 
 <script>
-    const animals = ["🐱", "🐰", "福", "🦁", "🐼", "🐨", "🐯", "🦓", "🦄", "🐵"];
+    // 10種類の動物たち（「福」を「🐢 (カメ)」に変更しました）
+    const animals = ["🐱", "🐰", "🐢", "🦁", "🐼", "🐨", "🐯", "🦓", "🦄", "🐵"];
     const track = document.getElementById("track");
     const select = document.getElementById("prediction");
-    const goalX = 85; // 判定用のゴールライン位置（%）
-    const finishX = 110; // 実際に走り抜ける位置（%）
+    const goalX_percentage = 85; // ゴール判定位置のパーセンテージ
+    let winnerIndex = -1; // 1着が決まったら更新される
 
     animals.forEach((emoji, i) => {
         let opt = document.createElement("option");
@@ -60,54 +61,11 @@
         document.getElementById("status-area").style.display = "inline-block";
         document.getElementById("ui").style.display = "none";
         
-        const racers = animals.map((_, i) => ({ id: `animal-${i}`, pos: 0, finished: false }));
-        let winnerIndex = -1;
+        const racers = animals.map((_, i) => ({ id: `animal-${i}`, pos: 0, isFinished: false }));
 
         const interval = setInterval(() => {
-            let allFinished = true;
+            let allRacersStopped = true;
 
             racers.forEach((racer, index) => {
-                // まだ走り抜けていないなら進む
-                if (racer.pos < finishX) {
-                    racer.pos += Math.random() * 1.2;
-                    document.getElementById(racer.id).style.left = racer.pos + "%";
-                    allFinished = false;
-                }
-
-                // 1着がラインを越えた瞬間を記録
-                if (racer.pos >= goalX && winnerIndex === -1) {
-                    winnerIndex = index;
-                    finishRace(winnerIndex); // 先に判定だけ出す
-                }
-            });
-
-            if (allFinished) {
-                clearInterval(interval);
-            }
-        }, 80);
-    }
-
-    function finishRace(winnerIndex) {
-        const prediction = document.getElementById("prediction").value;
-        const msg = document.getElementById("result-msg");
-        const winnerEmoji = animals[winnerIndex];
-
-        setTimeout(() => {
-            if (parseInt(prediction) === winnerIndex) {
-                msg.innerHTML = `結果：<span style="font-size:40px">${winnerEmoji}</span> が1着！<br>的中！おめでとう！🎉`;
-                document.body.style.backgroundColor = "#f1c40f";
-            } else {
-                msg.innerHTML = `結果：<span style="font-size:40px">${winnerEmoji}</span> が1着！<br>残念、ハズレです...`;
-            }
-
-            const reBtn = document.createElement("button");
-            reBtn.innerText = "もう一度遊ぶ";
-            reBtn.style.display = "block";
-            reBtn.style.margin = "20px auto";
-            reBtn.onclick = () => location.reload();
-            msg.appendChild(reBtn);
-        }, 1000); // ゴール後、少し余韻を持たせてから結果表示
-    }
-</script>
-</body>
-</html>
+                // 既にゴールしている動物は動かさない
+                if (racer.isFinished) {
