--- a/race.html
+++ b/race.html
@@ -114,4 +114,7 @@
     }
 </script>
 </body>
+<a href="index.html" style="position: absolute; top: 15px; left: 15px; text-decoration: none; background: white; color: #333; padding: 8px 12px; border-radius: 5px; font-weight: bold; font-size: 14px; box-shadow: 0 2px 5px rgba(0,0,0,0.2); z-index: 100;">
+    ⬅ メニューへ
+</a>
 </html>
