--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
                 目指せ億万長者デイトレード。
             </div>
         </a>
+
+        <a href="rpg.html" class="game-card">
+            <div class="game-icon">⚔️</div>
+            <div class="game-title">The Battle</div>
+            <div class="game-desc">
+                勇者 vs 魔王のワンマンバトル！<br>
+                戦略を駆使して勝利せよ。
+            </div>
+        </a>
     </div>
 
     <footer>
